k8b/PodProviderSecret.yaml
# This is a sample pod definition for using SecretProviderClass and aad-pod-identity to access the key vault
kind: Pod
apiVersion: v1
metadata:
  name: secrets-store-inline
  namespace: api
  labels:
    aadpodidbinding: apisecretsstoreinline                  # Set the label value to the name of your pod identity
spec:
  containers:
    - name: busybox
      image: k8s.gcr.io/e2e-test-images/busybox:1.29-1
      command:
        - "/bin/sleep"
        - "10000"
      volumeMounts:
      - name: secrets-store-api-inline
        mountPath: "/mnt/secrets-store-api"
        readOnly: true
  volumes:
    - name: secrets-store-api-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "azure-hack3-secretprovider"
