k8b/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  labels:
    app: poi
  namespace: azurehacker6003
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrydxn3984.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  labels:
    app: poi
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: poi
