k8b/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  labels:
    app: trips
  namespace: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registrydxn3984.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  labels:
    app: trips
  namespace: api  
spec:
  ports:
  - name: trips
  - port: 8081
    targetPort: 80
    protocol: TCP
  selector:
    app: trips
