k8b/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  labels:
    app: user-java
  namespace: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registrydxn3984.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  labels:
    app: user-java
spec:
  ports:
  - port: 8082
    targetPort: 80
    protocol: TCP
  selector:
    app: user-java
