k8b/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  labels:
    app: userprofile
  namespace: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registrydxn3984.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  labels:
    app: userprofile
  namespace: api  
spec:
  ports:
  - port: 8083
    targetPort: 80
    protocol: TCP
  selector:
    app: userprofile
