k8b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress
  labels:
    app: tripviewer-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/poi(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: poi.api.svc.cluster.local
            port:
              number: 8080
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile.api.svc.cluster.local
            port:
              number: 8083
      - path: /api/trips(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: trips.api.svc.cluster.local
            port:
              number: 8081
      - path: /api/user-java(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-java.api.svc.cluster.local
            port:
              number: 8082
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: tripviewer
            port:
              number: 80
